# research-plugins

./: .gitignore  AUDIT-LOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.en.md  README.md  catalog.json  index.ts  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: publish.yml  sync-mcp.yml  validate.yml
archived/: MANIFEST.md
curated/analysis/: README.md
curated/domains/: README.md
curated/literature/: README.md
curated/research/: README.md
curated/tools/: README.md
curated/writing/: README.md
mcp-configs/: registry.json
mcp-configs/academic-db/: ChatSpatial.json  academia-mcp.json  academic-paper-explorer.json  academic-search-mcp-server.json  agentinterviews-mcp.json  all-in-mcp.json  alphafold-mcp.json  apple-health-mcp.json  arxiv-latex-mcp.json  biomcp.json  biothings-mcp.json  climatiq-mcp.json  clinicaltrialsgov-mcp-server.json  deep-research-mcp.json  enrichr-mcp-server.json  fec-mcp-server.json  fhir-mcp.json  gibs-mcp.json  gis-mcp-server.json  google-earth-engine-mcp.json  google-researcher-mcp.json  idea-reality-mcp.json  lex.json  m4-clinical-mcp.json  omop-mcp.json  opengenes-mcp.json  openstax-mcp.json  openstreetmap-mcp.json  smithsonian-mcp.json
mcp-configs/ai-platform/: ai-counsel.json  (+4 more)
research_plugins/: __init__.py  cli.py
scripts/: catalog.ts  convert.ts  fix-frontmatter.ts  fix-text-emoji.ts  generate-indexes.ts  publish-individual.sh  sync-registry.ts  triage.ts  validate.ts
tests/: test-live-api-all.ts  test-query-validation.ts
types/: openclaw-plugin-sdk.d.ts
(+679 files in other folders)
