[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-plugins"
version = "1.0.0"
description = "350+ academic research skills, MCP configs, and plugins for Research-Claw and AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["academic", "research", "skills", "ai-agents", "openclaw"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://wentor.ai"
Repository = "https://github.com/wentorai/research-plugins"

[project.scripts]
research-plugins = "research_plugins.cli:main"

[tool.setuptools.packages.find]
include = ["research_plugins*"]

[tool.setuptools.package-data]
"*" = ["skills/**/*.md", "mcp-configs/**/*.json", "curated/**/*.md"]
